# crewai-playground

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.cursor/rules/: fastmcp-server-structure.mdc  python-style-and-typing.mdc
src/01_sequential_process/: calling_mcp_server_agent.py  experiment_langfuse.py  representative_agent.py  sample_sequential_agent.py
src/02_heirarchical_process/: diagnosis_agent.py  sample_heirchical_agent.py
